# facial-emotion-detection

./: .gitignore  DEPLOYMENT.md  Dockerfile  GPU_DEPLOYMENT.md  LICENSE  README.md  app.py  app_hf.py  pyproject.toml  railway.toml  requirements.txt  requirements_hf.txt  vercel.json
research/: model_cnn_grayscale.keras
static/css/: style.css
static/js/: main.js
templates/: index.html
